tdf#144151: do not adjust row height for font / style preview

In commit bcc51fb2ebdf77a1cc089857775fd742085b45b6 (add support for
in-place style preview, 2013-08-29), a feature of live preview was
introduced, to see the effect of not-yet-applied font currently
hovered in the font list. While doing this, it could recalculate
row heights (e.g., for auto-wrapped cells).

For large selection, this recalculation may take several seconds.
Also, this may mark document modified, and also result in following
UI operations slowdown.

This change prevents this recalculation for the preview. The cost
is that now the preview could be not 100% correct, but hopefully
this is much less problematic, than the problems it resolves.
SID_ATTR_CHAR_FONTHEIGHT (.uno:CharFontName) does the height adjust
anyway.

Change-Id: If347aa7222cb700d8969dd546727ae437f787d14
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183034
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 950cbe4ccf2a95981e40f2a9589b22a403784557)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183045
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>