sc/source/ui/inc/viewfunc.hxx
@@ -339,7 +339,8 @@ public:
                                     SCROW nEndRow , SCCOL nEndCol ,
                                     std::vector<std::unique_ptr<ScDataFormFragment>>& rEdits,
                                     sal_uInt16 aColLength);
-    void            UpdateSelectionArea( const ScMarkData& rSel, ScPatternAttr* pAttr = nullptr );
+    void UpdateSelectionArea(const ScMarkData& rSel, ScPatternAttr* pAttr = nullptr,
+                             bool adjustHeight = true);
 
     void            OnLOKInsertDeleteColumn(SCCOL nStartCol, tools::Long nOffset);
     void            OnLOKInsertDeleteRow(SCROW nStartRow, tools::Long nOffset);
